--- a/src/GestorWindow.fxml
+++ b/src/GestorWindow.fxml
@@ -48,6 +48,6 @@
       <Label layoutX="423.0" layoutY="607.0" text="Salário" />
       <Button fx:id="addMec" layoutX="503.0" layoutY="649.0" mnemonicParsing="false" onMouseClicked="#AddMec" prefHeight="33.0" prefWidth="150.0" text="Adicionar Mecânico" />
       <Button fx:id="rvMec" layoutX="503.0" layoutY="691.0" mnemonicParsing="false" onMouseClicked="#RemMec" prefHeight="33.0" prefWidth="150.0" text="Remover Mecânico" />
-      <Button fx:id="clean" layoutX="23.0" layoutY="598.0" mnemonicParsing="false" onMouseClicked="#atribuirEspecializacao" prefHeight="46.0" prefWidth="113.0" text="Limpar Lista do Mecânico" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="clean" layoutX="23.0" layoutY="598.0" mnemonicParsing="false" onMouseClicked="#CleanList" prefHeight="46.0" prefWidth="113.0" text="Limpar Lista do Mecânico" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
